# EagleTree

./: .gitignore  CMakeLists.txt  Makefile  Operating_System.h  address.cpp  block.cpp  block_management.h  config.cpp  event.cpp  experiment_runner.cpp  page_hotness_measurer.cpp  ssd.cpp  ssd.h
BlockManagers/: Garbage_Collector_500.cpp  Garbage_Collector_Greedy.cpp  Garbage_Collector_LRU.cpp  Garbage_Collector_Super.cpp  Migrator.cpp  bm_k_modal_groups.cpp  bm_locality.cpp
Experiments/: demo.cpp  greedy_demo.cpp  our_demo.cpp
FTLs/: DFTL.cpp
OperatingSystem/: File_Manager.cpp  flexible_reader.cpp  thread_implementations.cpp
Scheduler/: scheduler.cpp
Utilities/: visual_tracer.cpp
